# SynD

./: .env-template  .gitignore  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_docs.yml  setup_environment.sh
docs/: api.rst  conf.py  examples.rst  index.rst  usage.rst
examples/: create_model.py  generate_markov_trajectory.py  synd_demo.ipynb  use_saved_model.py
examples/data/: simple_model.py
examples/data/trp-cage/: pcoords.npy
examples/westpa/: README.md  west.cfg
examples/westpa/hamsm_optimization/: README.md  custom_optimization.py  process_coordinates.py  west.cfg
examples/westpa/with_augmentation/: README.md  west.cfg
synd/: __init__.py  cli.py  core.py  hosted.py
synd/models/: __init__.py  base.py
synd/models/discrete/: discrete.py  markov.py
synd/westpa/: __init__.py  augmentation.py  augmentation_driver.py  propagator.py
tests/: __init__.py  test_synd.py
